--- a/Booking page/booking.css
+++ b/Booking page/booking.css
@@ -452,239 +452,6 @@
   
   
   /*-----------------------------------*\
-   * #POPULAR
-  \*-----------------------------------*/
-  
-  .popular { padding-block: var(--section-padding); }
-  
-  .popular-list,
-  .popular-list > li:not(:last-child) { margin-bottom: 60px; }
-  
-  .popular-card {
-    position: relative;
-    overflow: hidden;
-    border-radius: var(--radius-25);
-    height: 430px;
-  }
-  
-  .popular-card .card-img { height: 100%; }
-  
-  .popular-card .card-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .popular-card .card-content {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    right: 20px;
-    background: var(--white);
-    border-radius: var(--radius-25);
-    padding: 20px;
-  }
-  
-  
-  .popular-card .card-rating {
-    background: var(--white);
-    color: var(--white);
-    position: absolute;
-    top: 0;
-    right: 25px;
-    display: flex;
-    align-items: center;
-    gap: 1px;
-    transform: translateY(-50%);
-    padding: 6px 10px;
-    border-radius: 20px;
-    font-size: 14px;
-  }
-  
-  .popular-card .card-subtitle {
-    color: var(--blue-ncs);
-    font-size: var(--fs-6);
-    text-transform: uppercase;
-    margin-bottom: 8px;
-  }
-  
-  .popular-card .card-title { margin-bottom: 5px; }
-  
-  .popular-card :is(.card-subtitle, .card-title) > a { color: inherit; }
-  
-  .popular .btn { margin-inline: auto; }
-  
-  
-  
-  
-  
-  /*-----------------------------------*\
-   * #PACKAGE
-  \*-----------------------------------*/
-  
-  .package { padding-block: var(--section-padding); }
-  
-  .package-list { margin-bottom: 40px; }
-  
-  .package-list > li:not(:last-child) { margin-bottom: 30px; }
-  
-  .package-card {
-    background: var(--white);
-    overflow: hidden;
-    border-radius: 15px;
-  }
-  
-  .package-card .card-banner { height: 250px; }
-  
-  .package-card .card-banner img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .package-card .card-content { padding: 30px 20px; }
-  
-  .package-card .card-title { margin-bottom: 15px; }
-  
-  .package-card .card-text {
-    line-height: 1.6;
-    margin-bottom: 20px;
-  }
-  
-  .card-meta-list {
-    background: var(--white);
-    max-width: max-content;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    box-shadow: 0 0 5px hsla(0, 0%, 0%, 0.15);
-    border-radius: 50px;
-  }
-  
-  .card-meta-item { position: relative; }
-  
-  .card-meta-item:not(:last-child)::after {
-    content: "";
-    position: absolute;
-    top: 4px;
-    right: -1px;
-    bottom: 4px;
-    width: 1px;
-    background: hsla(0, 0%, 0%, 0.3);
-  }
-  
-  .meta-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    padding-inline: 9px;
-    color: var(--black-coral);
-    font-size: var(--fs-8);
-  }
-  
-  .meta-box > ion-icon {
-    color: var(--white);
-    font-size: 13px;
-  }
-  
-  .package-card .card-price {
-    background: var(--united-nations-blue);
-    color: var(--white);
-    padding: 25px 20px;
-    text-align: center;
-  }
-  
-  .package-card .card-price .wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 5px 15px;
-    margin-bottom: 10px;
-  }
-  
-  .package-card .card-price .reviews { font-size: var(--fs-5); }
-  
-  .package-card .card-rating {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1px;
-    font-size: 14px;
-  }
-  
-  .package-card .card-rating ion-icon:last-child { color: hsl(0, 0%, 80%); }
-  
-  .package-card .price {
-    font-size: var(--fs-2);
-    font-family: var(--ff-montserrat);
-    font-weight: var(--fw-800);
-    margin-bottom: 20px;
-  }
-  
-  .package-card .price span {
-    font-size: var(--fs-7);
-    font-weight: initial;
-  }
-  
-  .package .btn { margin-inline: auto; }
-  
-  
-  
-  
-  
-  /*-----------------------------------*\
-   * #GALLERY
-  \*-----------------------------------*/
-  
-  .gallery { padding-block: var(--section-padding); }
-  
-  .gallery-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-  }
-  
-  .gallery-image {
-    width: 100%;
-    height: 100%;
-    border-radius: var(--radius-15);
-    overflow: hidden;
-  }
-  
-  .gallery-item:nth-child(3) { grid-area: 1 / 2 / 3 / 3; }
-  
-  .gallery-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  
-  
-  
-  
-  /*-----------------------------------*\
-   * #CTA
-  \*-----------------------------------*/
-  
-  .cta {
-    background: var(--white);
-    padding-block: var(--section-padding);
-  }
-  
-  .cta :is(.section-subtitle, .section-title, .section-text) { color: var(--white); }
-  
-  .cta .section-text { font-size: var(--fs-5); }
-  
-  
-  
-  
-  
-  /*-----------------------------------*\
    * #FOOTER
   \*-----------------------------------*/
   
@@ -815,37 +582,6 @@
   
   
   
-  /*-----------------------------------*\
-   * #GO TO TOP
-  \*-----------------------------------*/
-  
-  .go-top {
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
-    width: 35px;
-    height: 35px;
-    background: var(--bright-navy-blue);
-    color: var(--white);
-    display: grid;
-    place-items: center;
-    font-size: 18px;
-    border-radius: 6px;
-    box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.5);
-    opacity: 0;
-    transform: translateY(10px);
-    visibility: hidden;
-    transition: var(--transition);
-  }
-  
-  .go-top.active {
-    opacity: 0.8;
-    transform: translateY(0);
-    visibility: visible;
-  }
-  
-  .go-top:is(:hover, :focus) { opacity: 1; }
-  
   
   
   
@@ -920,35 +656,11 @@
   
   
   
-    /**
-     * TOUR SEARCH
-     */
-  
-    .tour-search-form {
-      display: gid;
-      grid-template-columns: 1fr 1fr;
-      align-items: flex-end;
-      gap: 1px;
-    }
-  
-    .tour-search-form .input-wrapper { margin-bottom: 15px; }
-    .tour-search-form .input-wrapper {margin-top: 5px;}
-  
-    .tour-search-form .input-field { padding: 15px 20px; }
-  
-    .tour-search .btn {
-      grid-column: span 20;
-      margin-top: 20px;
-      margin-bottom: 10px;
-    }
+ 
   
   
   
-    /**
-     * POPULAR
-     */
-  
-    .popular-card .card-content { right: auto; }
+   
   
   
   
@@ -1033,96 +745,10 @@
   
   
     /**
-     * POPULAR
-     */
-  
-    .popular-list {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 30px;
-      margin-bottom: 50px;
-    }
-  
-    .popular-list > li:not(:last-child) { margin-bottom: 0; }
-  
-    .popular-card .card-content { right: 20px; }
-  
-  
-  
-    /**
-     * PACKAGE
-     */
-  
-    .package-list { margin-bottom: 50px; }
-  
-    .package-list > li:not(:last-child) { margin-bottom: 40px; }
-  
-    .package-card {
-      display: grid;
-      grid-template-columns: 1.3fr 1.5fr 1fr;
-    }
-  
-    .package-card .card-banner { height: 100%; }
-  
-    .package-card .card-content { padding: 40px; }
-  
-    .package-card .card-price {
-      display: grid;
-      place-content: center;
-    }
-  
-    .package-card .card-price .wrapper { margin-bottom: 15px; }
-  
-  
-  
-    /**
-     * GALLERY
-     */
-  
-    .gallery { padding-bottom: calc(var(--section-padding * 2)); }
-  
-    .gallery-list {
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-    }
-  
-    .gallery-image { border-radius: var(--radius-25); }
-  
-  
-  
-    /**
-     * CTA
-     */
-  
-    .cta .container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-  
-    .cta-content { width: calc(100% - 225px); }
-  
-    .cta .section-text { margin-inline: 0; }
-  
-  
-  
-    /**
      * FOOTER
      */
   
-    .form-wrapper {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 20px;
-    }
-  
-    .footer-form .input-field { margin-bottom: 0; }
-  
-    .footer-form .btn { width: max-content; }
-  
-  }
-  
+    
   
   
   
@@ -1207,63 +833,9 @@
     .hero .container { max-width: 740px; }
   
   
+
   
-    /**
-     * TOUR SEARCH
-     */
-  
-    .tour-search-form { grid-template-columns: repeat(5, 1fr); }
-  
-    .tour-search .btn {
-      --padding: 15px;
-      grid-column: unset;
-      margin-top: 0;
-    }
-  
-  
-  
-    /**
-     * POPULAR
-     */
-  
-    .popular-list { grid-template-columns: repeat(3, 1fr); }
-  
-  
-  
-    /**
-     * PACKAGE
-     */
-  
-    .meta-box { --fs-8: 13px; }
-  
-    .meta-box > ion-icon { font-size: 15px; }
-  
-  
-  
-    /**
-     * CTA 
-     */
-  
-    .cta .section-title { max-width: 25ch; }
-  
-  
-  
-    /**
-     * FOOTER
-     */
-  
-    .footer-top .container {
-      grid-template-columns: repeat(3, 1fr);
-      gap: 50px;
-    }
-  
-    .footer-form { grid-column: unset; }
-  
-    .form-wrapper { flex-direction: column; }
-  
-    .footer-form .btn { width: 100%; }
-  
-  }
+    
   
   
   /**
@@ -1521,5 +1093,36 @@ background-color: var(--gunmetal); }
   cursor: pointer;
   width: 350px; /* Adjust width as needed */
   height: 50px; /* Adjust height as needed */
+  margin-top: 20px;
 }
 
+.footer-top .container {
+  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+}
+
+.footer-form { grid-column: unset; }
+
+.form-wrapper { flex-direction: column; }
+
+.footer-form .btn { width: 100%; }
+
+}}
+
+
+/* Go to Top Button Styles */
+.go-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #3f5bc9;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  text-decoration: none;
+}
