--- a/Gallery Page/gallery.css
+++ b/Gallery Page/gallery.css
@@ -1,44 +1,452 @@
-body {
-  font-family: Arial, sans-serif;
+/*-----------------------------------*\
+ * #style.css
+\*-----------------------------------*/
+
+/**
+ * copyright 2022 codewithsadee
+ */
+
+
+
+
+
+/*-----------------------------------*\
+ * #CUSTOM PROPERTY
+\*-----------------------------------*/
+
+:root {
+
+  /**
+   * colors
+   */
+
+  --united-nations-blue: hsl(214, 56%, 58%);
+  --bright-navy-blue: hsl(214, 57%, 51%);
+  --spanish-gray: hsl(0, 0%, 60%);
+  --black-coral: hsl(225, 8%, 42%);
+  --oxford-blue: hsl(208, 97%, 12%);
+  --yale-blue: hsl(214, 72%, 33%);
+  --blue-ncs: hsl(197, 100%, 36%);
+  --gunmetal: hsl(206, 34%, 20%);
+  --gainsboro: hsl(0, 0%, 88%);
+  --cultured: hsl(0, 0%, 98%);
+  --white: hsl(0, 0%, 100%);
+  --black: hsl(0, 0%, 0%);
+  --onyx: hsl(0, 0%, 25%);
+  --jet: hsl(0, 0%, 20%);
+
+  /**
+   * typography
+   */
+
+  --ff-poppins: "Poppins", sans-serif;
+  --ff-montserrat: "Montserrat", sans-serif;
+
+  --fs-1: calc(20px + 3.5vw);
+  --fs-2: calc(18px + 1.6vw);
+  --fs-3: calc(16px + 0.45vw);
+  --fs-4: 15px;
+  --fs-5: 14px;
+  --fs-6: 13px;
+  --fs-7: 12px;
+  --fs-8: 11px;
+
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
+  --fw-800: 800;
+
+  /**
+   * transition
+   */
+
+  --transition: 0.25s ease-in-out;
+
+  /**
+   * spacing
+   */
+
+  --section-padding: 60px;
+
+  /**
+   * border-radius
+   */
+
+  --radius-15: 15px;
+  --radius-25: 25px;
+
+}
+
+
+
+
+
+/*-----------------------------------*\
+ * #RESET
+\*-----------------------------------*/
+
+*, *::before, *::after {
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  box-sizing: border-box;
 }
 
-header {
-  background-color: #333;
-  color: white;
-  padding: 20px;
+li { list-style: none; }
+
+a { text-decoration: none; }
+
+a,
+img,
+span,
+input,
+label,
+button,
+ion-icon { display: block; }
+
+input,
+button {
+  background: lightgreen;
+  border: none;
+  font: inherit;
+}
+
+button { cursor: pointer; }
+
+input { width: 100%; }
+
+ion-icon { pointer-events: none; }
+
+html {
+  font-family: var(--ff-poppins);
+  scroll-behavior: smooth;
+}
+
+body { background: var(--white); }
+
+
+
+
+
+/*-----------------------------------*\
+ * #REUSED STYLE
+\*-----------------------------------*/
+
+.container { padding-inline: 15px; }
+
+.btn {
+  color: var(--white);
+  text-transform: uppercase;
+  font-size: var(--fs-5);
+  border-radius: 100px;
+  padding: var(--padding, 8px 18px);
+  border: var(--border-width, 2px) solid transparent;
+  transition: var(--transition);
+}
+
+.btn-primary {
+  background: var(--bright-navy-blue);
+  border-color: var(--bright-navy-blue);
+}
+
+.btn-primary:is(:hover, :focus) {
+  background: var(--yale-blue);
+  border-color: var(--yale-blue);
+}
+
+.btn-secondary { border-color: var(--white); }
+
+.btn-secondary:is(:hover, :focus) { background: hsla(0, 0%, 100%, 0.1); }
+
+.h1,
+.h2,
+.h3 {
+  font-weight: var(--fw-800);
+  font-family: var(--ff-montserrat);
+  text-transform: uppercase;
+}
+
+.h1 {
+  color: var(--white);
+  font-size: var(--fs-1);
+}
+
+.h2,
+.h3 { color: var(--gunmetal); }
+
+.h2 { font-size: var(--fs-2); }
+
+.h3 {
+  font-size: var(--fs-3);
+  font-weight: var(--fw-700);
+}
+
+.section-subtitle {
+  color: var(--bright-navy-blue);
+  font-size: var(--fs-5);
+  text-transform: uppercase;
+  font-family: var(--ff-montserrat);
+  margin-bottom: 8px;
+}
+
+.section-title { margin-bottom: 15px; }
+
+.section-text {
+  color: var(--black-coral);
+  margin-bottom: 30px;
+}
+
+.card-text {
+  color: var(--black-coral);
+  font-size: var(--fs-5);
+}
+
+
+
+
+
+/*-----------------------------------*\
+ * #HEADER
+\*-----------------------------------*/
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 61px;
+  z-index: 4;
+}
+
+.header-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: var(--transition);
+  border-bottom: 1px solid hsla(0, 0%, 100%, 0.1);
+  padding-block: 15px;
+  z-index: 1;
+}
+
+.header.active .header-top {
+  position: fixed;
+  background: var(--gunmetal);
+}
+
+.header-top .container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: flex-start;
+  align-items: center;
+}
+
+.helpline-box .wrapper { display: none; }
+
+.helpline-box .icon-box {
+  background: var(--bright-navy-blue);
+  padding: 6px;
+  border-radius: 50%;
+  color: var(--white);
+}
+
+.helpline-box .icon-box ion-icon { --ionicon-stroke-width: 40px; }
+
+.header-top .logo { margin-inline: auto; }
+
+.header-top .logo img { max-width: 100px; }
+
+.header-btn-group {
+  justify-self: flex-end;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--white);
+}
+
+.search-btn,
+.nav-open-btn {
+  font-size: 30px;
+  color: inherit;
+}
+
+.search-btn { font-size: 20px; }
+
+.header-bottom { border-bottom: 1px solid hsla(0, 0%, 100%, 0.1); }
+
+.header-bottom .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-block: 15px;
+}
+
+.social-list {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.social-link {
+  color: var(--white);
+  padding: 8px;
+  border: 1px solid hsla(0, 0%, 100%, 0.3);
+  border-radius: 50%;
+  font-size: 15px;
+  transition: var(--transition);
+}
+
+.social-link:is(:hover, :focus) { background: hsla(0, 0%, 100%, 0.2); }
+
+.header .btn { --padding: 4px 20px; }
+
+.header .navbar {
+  position: fixed;
+  top: 0;
+  right: -300px;
+  width: 100%;
+  max-width: 300px;
+  height: 100%;
+  background: var(--white);
+  visibility: hidden;
+  pointer-events: none;
+  transition: 0.15s ease-in;
+  z-index: 3;
+}
+
+.navbar.active {
+  right: 0;
+  visibility: visible;
+  pointer-events: all;
+  transition: 0.25s ease-out;
+}
+
+.navbar-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 15px;
+}
+
+.navbar-top .logo img { width: 150px; }
+
+.nav-close-btn {
+  font-size: 20px;
+  color: var(--bright-navy-blue);
+}
+
+.nav-close-btn ion-icon { --ionicon-stroke-width: 80px; }
+
+.navbar-list { border-top: 1px solid hsla(0, 0%, 0%, 0.1); }
+
+.navbar-list li { border-bottom: 1px solid hsla(0, 0%, 0%, 0.1); }
+
+.navbar-link {
+  padding: 15px 20px;
+  color: var(--jet);
+  font-weight: var(--fw-500);
+  font-size: var(--fs-4);
+  transition: var(--transition);
+  text-transform: capitalize;
+}
+
+.navbar-link:is(:hover, :focus) { color: var(--bright-navy-blue); }
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: var(--black);
+  opacity: 0;
+  pointer-events: none;
+  z-index: 2;
+  transition: var(--transition);
+}
+
+.overlay.active {
+  opacity: 0.7;
+  pointer-events: all;
+}
+
+
+
+
+
+/*-----------------------------------*\
+ * #HERO
+\*-----------------------------------*/
+
+.hero {
+  background-image: url("../Booking\ page/booking images/book2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: hsla(0, 0%, 0%, 0.7);
+  background-blend-mode: overlay;
+  display: grid;
+  place-items: center;
+  min-height: 600px;
   text-align: center;
+  padding-top: 125px;
 }
 
-main {
+.hero-title { margin-bottom: 20px; }
+
+.hero-text {
+  color: var(--white);
+  font-size: var(--fs 1);
+  margin-bottom: 30px;
+}
+
+.btn-group {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
-  padding: 20px;
+  align-items: center;
+  gap: 10px;
 }
 
-.gallery-item {
-  width: 300px;
-  padding: 10px;
-  background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+
+
+
+
+/*-----------------------------------*\
+ * #TOUR SEARCH
+\*-----------------------------------*/
+
+.tour-search {
+  background: var(--yale-blue);
+  padding-block: var(--section-padding);
 }
 
-.gallery-item img {
+.tour-search-form .input-label {
+  color: var(--white);
+  font-size: var(--fs-4);
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+.tour-search-form .input-field {
+  background: var(--white);
+  padding: 10px 15px;
+  font-size: var(--fs-5);
+  border-radius: 50px;
+}
+
+.tour-search-form .input-field::placeholder { color: var(--spanish-gray); }
+
+.tour-search-form .input-field::-webkit-datetime-edit {
+  color: var(--spanish-gray);
+  text-transform: uppercase;
+}
+
+.tour-search-form .input-wrapper { margin-bottom: 15px; }
+
+.tour-search .btn {
   width: 100%;
-  height: auto;
-  border-radius: 8px;
+  --border-width: 1px;
+  font-weight: var(--fw-600);
+  margin-top: 35px;
 }
 
-.gallery-item p {
-  text-align: center;
-  margin: 10px 0 0;
-  color: #666;
-}
 
 
 
@@ -48,9 +456,9 @@ main {
 \*-----------------------------------*/
 
 .footer-top {
-  background: var(--gunmetal);
+  background: var(--white);
   padding-block: var(--section-padding);
-  color: var(--gainsboro);
+  color: var(--spanish-gray);
 }
 
 .footer-brand { margin-bottom: 30px; }
@@ -64,8 +472,7 @@ main {
   line-height: 1.7;
 }
 
-.footer-contact { margin-bottom: 30px; 
-  align-self: var(--radius-25);}
+.footer-contact { margin-bottom: 30px; }
 
 .contact-title {
   position: relative;
@@ -86,7 +493,6 @@ main {
 
 .contact-text {
   font-size: var(--fs-5);
-  margin-top: 30px;
   margin-bottom: 15px;
   max-width: 200px;
 }
@@ -110,17 +516,12 @@ address {
 
 .contact-link:is(:hover, :focus) { color: var(--white); }
 
-.footer-form {
-  align-items: flex-end;
-}
-
 .form-text {
-  align-items: center;
   font-size: var(--fs-5);
   margin-bottom: 20px;
 }
 
-.footer-form .input-field {align-items: flex-start;
+.footer-form .input-field {
   background: var(--white);
   font-size: var(--fs-5);
   padding: 15px 20px;
@@ -128,35 +529,32 @@ address {
   margin-bottom: 10px;
 }
 
-.footer-form .btn { width: 100%;
-  text-align: center;
-background-color: var(--gunmetal); }
+.footer-form .btn { width: 100%; }
 
 .footer-bottom {
-  --gunmetal: hsl(143, 36%, 17%);
+  --gunmetal: hsl(205, 36%, 17%);
   background: var(--gunmetal);
-  padding-block: 15px;
-  text-align: left;
-  
+  padding-block: 20px;
+  text-align: center;
 }
 
 .copyright {
   color: var(--gainsboro);
   font-size: var(--fs-5);
-  
+  margin-bottom: 10px;
 }
 
 .copyright a {
   color: inherit;
-  display: inline-flex;
+  display: inline-block;
 }
 
 .copyright a:is(:hover, :focus) { color: var(--white); }
 
 .footer-bottom-list {
   display: flex;
-  align-items: right;
-  justify-content: right;
+  align-items: center;
+  justify-content: center;
   gap: 21px;
 }
 
@@ -181,34 +579,553 @@ background-color: var(--gunmetal); }
 .footer-bottom-link:is(:hover, :focus) { color: var(--white); }
 
 
-.footer-form .input-field {
-  flex: 1;
-  padding: 10px;
-  border: none;
-  border-radius: 50px;
-  margin-right: 10px;
-  width: 350px; /* Adjust width as needed */
-  height: 50; /* Adjust height as needed */
+
+
+
+
+
+
+
+/*-----------------------------------*\
+ * #MEDIA QUERIES
+\*-----------------------------------*/
+
+/**
+ * responsive for larger than 580px screen
+ */
+
+@media (min-width: 580px) {
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container {
+    max-width: 580px;
+    margin-inline: auto;
+  }
+
+  .btn {
+    --fs-5: 16px;
+    --padding: 12px 300px;
+  }
+
+  section:not(.cta) :is(.section-subtitle, .section-title, .section-text) {
+    text-align: center;
+  }
+
+  .section-text { margin-bottom: 40px; }
+
+  .card-text { --fs-5: 15px; }
+
+
+
+  /**
+   * HEADER
+   */
+
+  .header { padding-top: 83px; }
+
+  .helpline-box .icon-box { padding: 14px; }
+
+  .header-top .logo img { max-width: unset; }
+
+  .search-btn { font-size: 30px; }
+
+  .nav-open-btn { font-size: 40px; }
+
+  .header .btn {
+    --fs-5: 14px;
+    --padding: 6px 20px;
+  }
+
+
+
+  /**
+   * HERO
+   */
+
+  .hero {
+    min-height: 500px;
+    padding-top: 25px;
+  }
+
+  .hero-text { --fs-3: 12px; }
+
+  .btn-group { gap: 10px; }
+
+
+
+
+
+
+
+ 
+
+
+
+  /**
+   * FOOTER
+   */
+
+  .footer .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+  }
+
+  .footer-form { grid-column: span 20; }
+
+  .footer-bottom { text-align: left; }
+
+  .copyright { margin-bottom: 10; }
+
+  .footer-bottom-list { justify-content: flex-end; }
 
 }
 
-.footer-form .btn-secondary {
-  background-color:var(--gunmetal);
-  color: #fff;
-  padding: 10px 20px;
-  border: 1;
-  border-radius: 50px;
-  cursor: pointer;
-  width: 350px; /* Adjust width as needed */
-  height: 50px; /* Adjust height as needed */
-}
 
 
 
 
+/**
+ * responsive for larger than 768px screen
+ */
 
+@media (min-width: 768px) {
+
+  /**
+   * CUSTOM PROPERTY
+   */
+
+  :root {
+
+    /**
+     * typography
+     */
+
+    --fs-5: 15px;
+
+  }
+
+
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container { max-width: 600px; }
+
+  .section-text {
+    max-width: 60ch;
+    margin-inline: auto;
+  }
+
+
+
+  /**
+   * HEADER
+   */
+
+  .helpline-box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .helpline-box .wrapper {
+    display: block;
+    color: var(--white);
+    font-size: var(--fs-6);
+  }
+
+  .social-list { gap: 10px; }
+
+
+
+  /**
+   * FOOTER
+   */
+
+  
+
+
+
+
+/**
+ * responsive for larger than 992px screen
+ */
+
+@media (min-width: 992px) {
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container { max-width: 1050px; }
+
+
+
+  /**
+   * HEADER
+   */
+
+  .header.active .header-top {
+    position: unset;
+    background: unset;
+  }
+
+  .nav-open-btn,
+  .navbar-top { display: none; }
+
+  .header-bottom { border-bottom: none; }
+
+  .header.active .header-bottom {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: var(--white);
+    color: var(--onyx);
+    box-shadow: 0 2px 5px hsla(0, 0%, 0%, 0.08);
+    transition: var(--transition);
+  }
+
+  .header-bottom .container { padding-block: 0; }
+
+  .header .navbar { all: unset; }
+
+  .navbar-list {
+    border-top: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .navbar-list li { border-bottom: none; }
+
+  .navbar-link {
+    color: var(--white);
+    --fs-4: 16px;
+    font-weight: unset;
+    text-transform: uppercase;
+    padding: 20px 15px;
+  }
+
+  .header.active .navbar-link { color: var(--onyx); }
+
+  .header.active .navbar-link:is(:hover, :focus) { color: var(--bright-navy-blue); }
+
+  .header.active .social-link {
+    color: var(--onyx);
+    border-color: hsla(0, 0%, 0%, 0.15);
+  }
+
+  .overlay { display: none; }
+
+
+
+  /**
+   * HERO
+   */
+
+  .hero .container { max-width: 740px; }
 
 
 
 
   
+
+
+/**
+ * responsive for larger than 1200px screen
+ */
+
+@media (min-width: 1200px) {
+
+  /**
+   * CUSTOM PROPERTY
+   */
+
+  :root {
+
+    /**
+     * spacing
+     */
+
+    --section-padding: 100px;
+
+  }
+
+
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container { max-width: 1180px; }
+
+}
+
+
+
+
+
+.place {
+  margin-bottom: 100px;
+}
+
+.place-image {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.place-name {
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+}
+ 
+ 
+
+/* Targeting the h3 element inside the #service-details section */
+#service-details .container h3 {
+margin-top: -120px; /* Adjust the value as needed */
+margin-bottom: 20px; 
+color: aliceblue;/
+/* You can also use shorthand for margin to set all sides at once */
+/* margin: 20px 0; */ /* This sets top and bottom margins to 20px, left and right to 0 */
+}
+
+
+/* Basic styling for all h4 elements */
+h4 {
+color: white; /* Text color */
+font-size: 24px; /* Font size */
+font-weight: itelic; /* Font weight */
+margin-top: 20px; /* Top margin */
+margin-bottom: 20px; /* Bottom margin */
+text-align: left; /* Center align text */
+text-transform: uppercase; /* Transform text to uppercase */
+letter-spacing: 1px; /* Space between letters */
+}
+
+/* Change text color for the h4 element */
+h5 {
+color: blue; /* Replace with your desired color */
+}
+
+/* Change text color for the paragraph element */
+p {
+color: white; /* Replace with your desired color */
+}
+
+/* Change text color using a class */
+.header {
+color: red; /* Replace with your desired color */
+}
+
+.paragraph {
+color: purple; /* Replace with your desired color */
+}
+
+  
+
+/*-----------------------------------*\
+* #FOOTER
+\*-----------------------------------*/
+
+.footer-top {
+background: var(--gunmetal);
+padding-block: var(--section-padding);
+color: var(--gainsboro);
+}
+
+.footer-brand { margin-bottom: 30px; }
+
+.footer-brand img { width: 180px; }
+
+.footer-brand .logo { margin-bottom: 20px; }
+
+.footer-text {
+font-size: var(--fs-5);
+line-height: 1.7;
+}
+
+.footer-contact { margin-bottom: 30px; 
+align-self: var(--radius-25);}
+
+.contact-title {
+position: relative;
+font-family: var(--ff-montserrat);
+font-weight: var(--fw-500);
+margin-bottom: 30px;
+}
+
+.contact-title::after {
+content: "";
+position: absolute;
+bottom: -10px;
+left: 0;
+width: 50px;
+height: 2px;
+background: var(--bright-navy-blue);
+}
+
+.contact-text {
+font-size: var(--fs-5);
+margin-top: 30px;
+margin-bottom: 15px;
+max-width: 200px;
+}
+
+.contact-item {
+display: flex;
+justify-content: flex-start;
+align-items: center;
+gap: 10px;
+margin-bottom: 10px;
+}
+
+.contact-item ion-icon { --ionicon-stroke-width: 40px; }
+
+.contact-link,
+address {
+font-style: normal;
+color: var(--gainsboro);
+font-size: var(--fs-5);
+}
+
+.contact-link:is(:hover, :focus) { color: var(--white); }
+
+.footer-form {
+align-items: flex-end;
+}
+
+.form-text {
+align-items: center;
+font-size: var(--fs-5);
+margin-bottom: 20px;
+}
+
+.footer-form .input-field {align-items: flex-start;
+background: var(--white);
+font-size: var(--fs-5);
+padding: 15px 20px;
+border-radius: 100px;
+margin-bottom: 10px;
+}
+
+.footer-form .btn { width: 100%;
+text-align: center;
+background-color: var(--gunmetal); }
+
+.footer-bottom {
+--gunmetal: hsl(205, 36%, 17%);
+background: var(--gunmetal);
+padding-block: 15px;
+text-align: left;
+
+}
+
+.copyright {
+color: var(--gainsboro);
+font-size: var(--fs-5);
+
+}
+
+.copyright a {
+color: inherit;
+display: inline-flex;
+}
+
+.copyright a:is(:hover, :focus) { color: var(--white); }
+
+.footer-bottom-list {
+display: flex;
+align-items: right;
+justify-content: right;
+gap: 21px;
+}
+
+.footer-bottom-list > li { position: relative; }
+
+.footer-bottom-list > li:not(:last-child)::after {
+content: "";
+position: absolute;
+top: 3px;
+right: -10px;
+bottom: 3px;
+width: 1px;
+background: hsla(0, 0%, 100%, 0.2);
+}
+
+.footer-bottom-link {
+color: var(--gainsboro);
+font-size: var(--fs-7);
+transition: var(--transition);
+}
+
+.footer-bottom-link:is(:hover, :focus) { color: var(--white); }
+
+
+.footer-form .input-field {
+flex: 1;
+padding: 10px;
+border: none;
+border-radius: 50px;
+margin-right: 10px;
+width: 350px; /* Adjust width as needed */
+height: 50; /* Adjust height as needed */
+
+}
+
+.footer-form .btn-secondary {
+background-color:var(--gunmetal);
+color: #fff;
+padding: 10px 20px;
+border: 1;
+border-radius: 50px;
+cursor: pointer;
+width: 350px; /* Adjust width as needed */
+height: 50px; /* Adjust height as needed */
+}
+
+.footer-top .container {
+grid-template-columns: repeat(3, 1fr);
+gap: 50px;
+}
+
+.footer-form { grid-column: unset; }
+
+.form-wrapper { flex-direction: column; }
+
+.footer-form .btn { width: 100%; }
+
+}}
+
+
+/* Go to Top Button Styles */
+.go-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #3f5bc9;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  text-decoration: none;
+}
+
+
+/* Do not touch the upper css or code */
+/* upper css is for header and footer */
